send email with credentials to students - added username / password to student form

--- a/src/main/resources/mail/new_account.html
+++ b/src/main/resources/mail/new_account.html
@@ -11,7 +11,7 @@
     
     <div style="text-align: left;">
 
-        <p>Welcome professor <span th:text="${name}"></span></p>
+        <p>Welcome <span th:text="${type}"></span> <span th:text="${name}"></span></p>
 
         <p>Your new account on MCIT has been created. To login on our portal, please go to: <span th:text="${url}"></span> and enter the credentials as below:</p>
 
